<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        style="@style/login.welcome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:text="@string/welcome" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:background="@drawable/login_panel_bg"
        android:orientation="vertical" >

        <TextView
            style="@style/login.contentColor.contentTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="10dip"
            android:text="@string/username" />

        <EditText
            android:id="@+id/username"
            style="@style/login.contentColor.edittext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:inputType="number"
            android:background="@drawable/edit_text_state_bg" />

        <TextView
            style="@style/login.contentColor.contentTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="10dip"
            android:text="@string/pwd" />

        <EditText
            android:id="@+id/password"
            style="@style/login.contentColor.edittext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:inputType="textPassword"
            android:background="@drawable/edit_text_state_bg" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/remember_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:button="@drawable/checkbox_state_bg" />

            <TextView
                style="@style/login.contentColor.contentTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/remember_pwd"
                android:text="@string/remember_pwd" />

            <TextView
                android:id="@+id/forget_pwd"
                style="@style/login.contentColor.contentTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dip"
                android:text="@string/forget_pwd" />
        </RelativeLayout>

    </LinearLayout>

     <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="20dip"
            android:text="@string/login"
            style="@style/login.Btn"
            android:background="@drawable/normal_btn_click" 
            android:onClick="LoginBtnClick"/>
</LinearLayout>