<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/order_top_bar" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/complete_panel_bg"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:layout_marginTop="10dip"
                android:background="@drawable/shape"
                android:gravity="center"
                android:orientation="horizontal" >
                <TextView
                    style="@style/order_detail.state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dip"
                    android:layout_marginTop="5dip"
                    android:text="@string/order_complete_panel" />
            </LinearLayout>

            <Button
                android:id="@+id/base_info_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:layout_marginTop="40dip"
                android:background="@drawable/normal_btn_click"
                android:onClick="BaseInfoAndFeeBtnClick"
                android:text="@string/conplete_panel_btn1" />

            <Button
                android:id="@+id/answer_question_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:layout_marginTop="15dip"
                android:background="@drawable/normal_btn_click"
                android:onClick="AnswerQuestionBtnClick"
                android:text="@string/conplete_panel_btn2" />

            <Button
                android:id="@+id/photo_video_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:layout_marginTop="15dip"
                android:background="@drawable/normal_btn_click"
                android:onClick="PhotoAndVideoBtnClick"
                android:text="@string/conplete_panel_btn3" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:layout_marginTop="15dip"
                android:background="@drawable/normal_btn_click"
                android:onClick="CompleteOrderBtnClick"
                android:text="@string/conplete_panel_btn4" />

            <Button
                android:id="@+id/print_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:layout_marginTop="15dip"
                android:background="@drawable/normal_btn_click"
                android:onClick="PrintReviewBtnClick"
                android:text="@string/conplete_panel_btn5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true" >

            <include layout="@layout/order_bottom_bar" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>